[gd_scene load_steps=2 format=3 uid="uid://ccmj71mwg532g"]

[ext_resource type="Script" uid="uid://ccfg55xd288ex" path="res://src/scripts/Panels/upgrade_panel.gd" id="1_ffqcc"]

[node name="UpgradePanel" type="ColorRect"]
offset_right = 124.0
offset_bottom = 339.0
color = Color(0.601223, 0.601223, 0.601223, 1)
script = ExtResource("1_ffqcc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 213.0
offset_right = 262.0
offset_bottom = 339.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="UpgradesAccess" type="Button" parent="."]
layout_mode = 0
offset_top = 340.0
offset_right = 45.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 8
text = "upgrades"

[node name="UpgradeDamage" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 59.0
offset_right = 48.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 5
text = "+damage"

[node name="UpgradeCritChance" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 97.0
offset_right = 48.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 5
text = "+Crit Chance"

[node name="UpgradesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 53.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 11
text = "Upgrades"

[node name="MiningLaserlabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 24.0
offset_right = 72.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 9
text = "Mining Laser"

[node name="CurrentDamageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 45.0
offset_right = 35.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 7
text = "Damage:"

[node name="CurrentDamageTracker" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 45.0
offset_right = 105.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 7
text = "1"

[node name="DamagePlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 58.0
offset_right = 107.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="CurrentDamageCost" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 68.0
offset_right = 120.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 7
text = "100"

[node name="CurrentCritChanceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 84.0
offset_right = 43.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 7
text = "Crit Chance:"

[node name="CurrentCritChanceTracker" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 84.0
offset_right = 106.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 7
text = "0.0%"

[node name="CritChancePlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 96.0
offset_right = 99.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="CurrentCritChanceCost" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 106.0
offset_right = 119.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 7
text = "100"

[node name="DronesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 123.0
offset_right = 42.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 9
text = "Drones"

[node name="DronesCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 140.0
offset_right = 43.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 7
text = "Drones:"

[node name="DronesCountTrackerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 140.0
offset_right = 112.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 7
text = "12"

[node name="DronesPlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 150.0
offset_right = 105.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="DronesCost" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 161.0
offset_right = 119.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 7
text = "100"

[node name="PurchaseDrone" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 153.0
offset_right = 33.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 5
text = "+1 Drone"

[node name="DroneDamageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 174.0
offset_right = 56.0
offset_bottom = 185.0
theme_override_font_sizes/font_size = 7
text = "Drone Damage:"

[node name="DroneDamage" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 175.0
offset_right = 118.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 7
text = "5"

[node name="DroneDamagePlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 185.0
offset_right = 105.0
offset_bottom = 196.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="DroneDamageCost" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 194.0
offset_right = 104.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 7
text = "100"

[node name="UpgradeDroneDamage" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 186.0
offset_right = 36.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 5
text = "+ Damage"

[node name="FerriteRefinery" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 215.0
offset_right = 71.0
offset_bottom = 231.0
theme_override_font_sizes/font_size = 9
text = "Ferrite Refinery"

[node name="FerriteAutoSpeed" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 230.0
offset_right = 43.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 7
text = "Auto Speed"

[node name="FerriteRefinerySpeed" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 230.0
offset_right = 112.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 7
text = "0"

[node name="FerritePlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 240.0
offset_right = 105.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="FerriteRefinerySpeedCost" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 251.0
offset_right = 127.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 7
text = "200"

[node name="UpgradeRefinerySpeed" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 243.0
offset_right = 39.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 5
text = "+ Speed"

[node name="RefineryEfficiency" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 264.0
offset_right = 56.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 7
text = "Effici. Bonus:"

[node name="EfficiencyBonus" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 265.0
offset_right = 118.0
offset_bottom = 276.0
theme_override_font_sizes/font_size = 7
text = "1"

[node name="RefineryEfficiencyBonusCount" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 275.0
offset_right = 105.0
offset_bottom = 286.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="EfficiencyBonusCost" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 284.0
offset_right = 104.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 7
text = "100"

[node name="UpgradeEfficiency" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 276.0
offset_right = 39.0
offset_bottom = 292.0
theme_override_font_sizes/font_size = 5
text = "+ Efficiency"

[node name="RefineryFerriteCost" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 298.0
offset_right = 56.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 7
text = "Ferrite Cost:"

[node name="CurrentFerriteCost" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 299.0
offset_right = 118.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 7
text = "8"

[node name="FerriteCostPlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 309.0
offset_right = 105.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="FerriteCostPlatCost" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 318.0
offset_right = 104.0
offset_bottom = 329.0
theme_override_font_sizes/font_size = 7
text = "500"

[node name="UpgradeFerriteCost" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 311.0
offset_right = 42.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 5
text = "Lower Cost"

[node name="PlasmaGenerator" type="Label" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 215.0
offset_right = 204.0
offset_bottom = 231.0
theme_override_font_sizes/font_size = 9
text = "Plasma Generator"

[node name="PlasmaGeneratorAutoSpeed" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 230.0
offset_right = 166.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 7
text = "Auto Speed:"

[node name="GeneratorAutoSpeed" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 230.0
offset_right = 235.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 7
text = "0"

[node name="GeneratorAutoSpeedPlatCost" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 240.0
offset_right = 228.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="AutoSpeedPlatCost" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 251.0
offset_right = 250.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 7
text = "200"

[node name="PlasmaGeneratorSpeedUpgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 243.0
offset_right = 162.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 5
text = "+ Speed"

[node name="PlasmaGeneratorOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 264.0
offset_right = 179.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 7
text = "Output:"

[node name="GeneratorOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 265.0
offset_right = 241.0
offset_bottom = 276.0
theme_override_font_sizes/font_size = 7
text = "1"

[node name="OutputPlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 275.0
offset_right = 228.0
offset_bottom = 286.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="OutputCost" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 284.0
offset_right = 253.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 7
text = "100"

[node name="GeneratorOutputUpgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 276.0
offset_right = 162.0
offset_bottom = 292.0
theme_override_font_sizes/font_size = 5
text = "+1 Output"

[node name="GeneratorFuelCost" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 298.0
offset_right = 179.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 7
text = "Fuel Cost:"

[node name="FuelCost" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 298.0
offset_right = 239.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 7
text = "8"

[node name="GeneratorFuelPlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 309.0
offset_right = 227.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 7
text = "Platinum Cost"

[node name="FuelPlatinumCost" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 318.0
offset_right = 244.0
offset_bottom = 329.0
theme_override_font_sizes/font_size = 7
text = "500"

[node name="UpgradeFuelCost" type="Button" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 311.0
offset_right = 165.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 5
text = "Lower Cost"

[node name="HideUpgradesPanel" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 19.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 6
text = "Hide"

[connection signal="button_down" from="UpgradesAccess" to="." method="_on_upgrades_access_button_down"]
[connection signal="button_down" from="UpgradeDamage" to="." method="_on_upgrade_damage_button_down"]
[connection signal="button_down" from="UpgradeCritChance" to="." method="_on_upgrade_crit_chance_button_down"]
[connection signal="button_down" from="PurchaseDrone" to="." method="_on_purchase_drone_button_down"]
[connection signal="button_down" from="UpgradeDroneDamage" to="." method="_on_upgrade_drone_damage_button_down"]
[connection signal="button_down" from="UpgradeRefinerySpeed" to="." method="_on_upgrade_refinery_speed_button_down"]
[connection signal="button_down" from="UpgradeEfficiency" to="." method="_on_upgrade_efficiency_button_down"]
[connection signal="button_down" from="UpgradeFerriteCost" to="." method="_on_upgrade_ferrite_cost_button_down"]
[connection signal="button_down" from="PlasmaGeneratorSpeedUpgrade" to="." method="_on_plasma_generator_speed_upgrade_button_down"]
[connection signal="button_down" from="GeneratorOutputUpgrade" to="." method="_on_generator_output_upgrade_button_down"]
[connection signal="button_down" from="UpgradeFuelCost" to="." method="_on_upgrade_fuel_cost_button_down"]
[connection signal="button_down" from="HideUpgradesPanel" to="." method="_on_hide_upgrades_panel_button_down"]
